--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,10 @@ input[name="checkbox"]:checked {
 }
 
 .app {
+  max-width: 600px;
+  margin: 2% 0 0 2%;
   background-color: whitesmoke;
+  border: 1px solid #333;
   color: #333;
 }
 
