--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@ input[name="checkbox"]:checked {
 
 .app {
   max-width: 600px;
-  margin: 1% 0 0 2%;
+  margin: 1.5%;
   background-color: whitesmoke;
   border: 1px solid #333;
   color: #333;
